# idlerpg-rpc

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/: build.yml
.github/workflows/: build.yml
src/: main.rs  profile.rs
