[package]
name = "idlerpg-rich-presence"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord_game_sdk = "1.0"
ureq = { version = "2.0", default-features = false, features = ["tls", "json"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"

