[package]
name = "idlerpg-rich-presence"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rpc-client = { git = "https://github.com/Gelbpunkt/discord-rpc-client.rs" }
ureq = { version = "2.1", default-features = false, features = ["tls"] }
once_cell = "1.7"
url = "2.2"
nanoserde = "0.1"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
