[package]
name = "idlerpg-rich-presence"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.1"
ureq = { version = "2.1", default-features = false, features = ["tls"] }
once_cell = "1.7"
url = "2.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
